--- a/ems/package.json
+++ b/ems/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "ejs": "^3.1.5",
+    "helmet": "^4.1.1",
     "mongoose": "^5.10.6",
     "morgan": "^1.10.0"
   }
