--- a/ems/package.json
+++ b/ems/package.json
@@ -7,6 +7,8 @@
   },
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
+    "csurf": "^1.11.0",
     "ejs": "^3.1.5",
     "helmet": "^4.1.1",
     "mongoose": "^5.10.6",
