--- a/ems/package.json
+++ b/ems/package.json
@@ -13,6 +13,7 @@
     "cookie-parser": "^1.4.5",
     "csurf": "^1.11.0",
     "ejs": "^3.1.5",
+    "express": "^4.17.1",
     "helmet": "^4.1.1",
     "mongoose": "^5.10.6",
     "morgan": "^1.10.0"
